<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.adriancastano.punto1.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/seleccion"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/rGroup"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rCuadro"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/rCirculo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/rTriangulo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/rCubo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />


        </RadioGroup>
    </LinearLayout>

    <ImageView
        android:id="@+id/iImagen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <TextView
            android:id="@+id/tIngreso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ingreso"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/lCirculo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tIngreso"
            android:visibility="invisible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/radio"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/eR"
                android:layout_width="200sp"
                android:layout_height="match_parent"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lComun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tIngreso"
            android:visibility="invisible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/lado"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/eL"
                android:layout_width="200sp"
                android:layout_height="match_parent"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lTriangulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tIngreso"
            android:orientation="horizontal"
            android:visibility="invisible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/ladoa"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/eLA"
                android:layout_width="50sp"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/ladob"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/eLB"
                android:layout_width="50sp"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/ladoc"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/eLC"
                android:layout_width="50sp"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:textSize="20sp" />

        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:onClick="calcular"
        android:text="@string/calcular" />

    <TextView
        android:id="@+id/tResultado"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:hint="@string/resultado"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>
